--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         padding: 0;
         font-family: 'Ubuntu', sans-serif;
     }
+    html{
+        background-color: rgb(73, 73, 73);
+    }    
     h1{
         text-align: center;
         margin-top: 30px;
