--- a/index.html
+++ b/index.html
@@ -26,26 +26,42 @@
         font-family: 'Ubuntu', sans-serif;
     }
     html{
-        background-color: rgb(73, 73, 73);
-    }    
+        background: linear-gradient(#6D5BC7, #DAD3FF);
+        height: 100%;
+    }
     h1{
         text-align: center;
-        margin-top: 30px;
+        margin-top: 300px;
+        color: white;
     }
     div{
         position: relative;
         float: left;
-        width: 100%;
+        width: 1000px;
         height: 100px;
         display: flex;
+        margin-left: calc(50% - 500px);
+        margin-top: 30px;
         justify-content: space-around;
     }
     button{
-        width: 100px;
-        height: 30px;
-        margin-top: 50px;
-        border: none;
+        color: #fff !important;
+        width: 150px;
+        height: 50px;
+        margin-top: 35px;
+        border: 2px solid #ffffff;
         cursor: pointer;
+        font-size: 25px;
+        background: none;
+        outline: 1px solid;
+        outline-color: rgba(255, 255, 255, 0.4);
+        transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+    }
+    button:hover{
+        box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.4);
+        outline-color: rgba(49, 138, 172, 0);
+        outline-offset: 80px;
+        text-shadow: 1px 1px 6px #fff;
     }
 </style>
 </html>
